[package]
name = "learn-wgpu"
version = "0.1.0"
authors = ["Tomochika Hara <git@thara.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.22"
cgmath = "0.17"
env_logger = "0.7"
log = "0.4"
wgpu = "0.7"
futures = "0.3"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"
tobj = "2.0.4"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.7"

# [dependencies.wgpu]
# version = "0.6"
# features = ["vulkan-portability"]
